@@ -113,7 +113,9 @@ export(makeParamSet)
 export(makeUntypedLearnerParam)
 export(makeUntypedParam)
 export(paramValueToString)
+export(plotEAF)
 export(plotOptPath)
+export(plotYTraces)
 export(removeMissingValues)
 export(renderOptPathPlot)
 export(repairPoint)
