@@ -1,0 +1,73 @@
+#' @title Plots Y traces of multiple optimization paths
+#' 
+#' @description Can be used for only single-objective optimization paths.
+#' Useful to compare runs of different algorithms on the same optimization problem.
+#' You can add your own ggplot layers to the resulting plot object.
+#'
+#' @param opt.paths [\code{list}]\cr
+#'   List of \code{OptPath} objects
+#' @return 
+#'   ggplot2 plot object
+
+renderYTraces = function(opt.paths) {
+  
+  assertList(opt.paths, types = "OptPath", min.len = 1L)
+  run.name = names(opt.paths)
+  y.name = NULL
+  minimize = NULL
+  data = data.frame()
+  # combine y traces for this algo + add algo / repl + do some sanity checks
+  fronts = lapply(seq_along(opt.paths), function(j) {
+    run = opt.paths[[j]]
+    df = data.frame(
+      y = getOptPathY(op = run),
+      dob = getOptPathDOB(op = run)
+    )
+    cns = colnames(df)
+    if (length(cns) != 2L) {
+      stopf("Must always have 1 objective in opt path. But found: %i", length(cns) - 1)
+    }
+    if (j == 1L) {
+      y.name <<- cns[1]
+      minimize <<- run$minimize
+    }
+    if (!y.name == cns[1]) {
+      stopf("Must always have the same objective in opt path: %s (first ones taken). But found here: %s",
+        collapse(y.name), collapse(cns[1]))
+    }
+    if (!minimize == run$minimize) {
+      stopf("Must always have the same 'minimize' settings for objective in opt path: %s (first one taken).
+          But found here: %s", minimize, run$minimize)
+    }
+    # add column for algorithm and replication
+    cbind(df, .algo = run.name[j])
+  })
+  
+  data = do.call(rbind, fronts)
+  mean.data = aggregate(data[[y.name]], by = list(data$dob, data$.algo), FUN = mean)
+  names(mean.data) = c("dob", ".algo", y.name)
+  
+  pl = ggplot2::ggplot(data, ggplot2::aes_string(x = "dob", y = y.name, group = ".algo", 
+    linetype = ".algo", col = ".algo"))
+  pl = pl + ggplot2::geom_point(size = 3)
+  pl = pl + ggplot2::geom_line(data = mean.data, size = 1) 
+  
+  return(pl)
+}
+
+#' @title Plots Y traces of multiple optimization paths
+#'
+#' @description Plot function for \code{\link{renderYTraces}}
+#'
+#' @param opt.paths [\code{list}]\cr
+#'   List of \code{OptPath} objects
+#'
+#' @return [\code{NULL}]
+#'
+#' @export
+
+plotYTraces = function(opt.paths) {
+  print(renderYTraces(opt.paths))
+  return(invisible(NULL))
+}
+
