@@ -3,6 +3,7 @@ ParamHelpers_1.5:
 - getDefaults: new option include.null
 - convertParamSetToIrace: removed argument 'digits' to keep maximum precision of boundaries
 - added renderOptPathPlot and plotOptPath for plotting of optimization paths.
+- added plotEAF and plotYTraces to compare singlecrit and bicrit optimization paths.
 - added property 'tunable' to make*Param
 - isFeasible supports named lists for unordered checks
 - filterParams can now filter based on 'ids' and 'tunable'
